# otus_homework_10

./: CMakeLists.txt  README.md  database.cpp  database.h  db.cpp  db.h  gtest_database.cpp  gtest_query.cpp  join_client.cpp  main.cpp  server.cpp  server.h  session.cpp  session.h  table.h
.github/workflows/: release.yml
qt/table/: CMakeLists.txt  db.cpp  db.h  main.cpp
